# huffman-archiver

./: CMakeLists.txt  clean.sh
include/: arg_utils.h  bitio.h  huffman.h  huffman_archiver.h  huffman_dearchiver.h  huffman_util.h  hufftree.h
src/: arg_utils.cpp  bitio.cpp  huffman_archiver.cpp  huffman_dearchiver.cpp  hufftree.cpp  main.cpp
test/: run_all_tests.sh
test/itest_data/: Kompromiss.fb2  main.cpp
test/itest_scripts/: gen.py  itest.sh  ritest.sh  vritest.sh
test/test_src/: oldtest.cpp  test.cpp
